add create, getList for http handler; change logrus to log;
