# internal/server/http/middleware.go
@@ -1,9 +1,9 @@
 // Code generated by meta-egg. CAREFULLY EDIT.
 // WILL NOT BE replace after re-generated, unless you confirm it!
 // CAREFULLY EDIT.
-// Version: v1.0.0-EE
+// Version: v1.0.4-EE
 // Author: meta-egg
-// Generated at: 2023-04-16 18:27
+// Generated at: 2023-04-22 00:40
 package server
 
 import (
@@ -16,7 +16,7 @@ import (
 
 	jgjwt "github.com/Jinglever/go-jwt"
 	"github.com/gin-gonic/gin"
-	"github.com/sirupsen/logrus"
+	log "github.com/sirupsen/logrus"
 )
 
 const (
@@ -56,7 +56,7 @@ func authHandler(jwt *jgjwt.JWT, cfg *Config) gin.HandlerFunc {
 	return func(c *gin.Context) {
 		tokenFields := strings.Fields(c.GetHeader(AuthToken))
 		if len(tokenFields) != 2 || tokenFields[0] != AuthTokenMark {
-			logrus.Errorf("%s: authorization token is not provided", c.Request.RequestURI)
+			log.Errorf("%s: authorization token is not provided", c.Request.RequestURI)
 			c.Error(cerror.Unauthenticated("authorization token is not provided"))
 			c.Abort()
 			return
@@ -73,7 +73,7 @@ func authHandler(jwt *jgjwt.JWT, cfg *Config) gin.HandlerFunc {
 			jwtClaim, err = jwt.DecodeTokenUnverified(token)
 		}
 		if err != nil {
-			logrus.Errorf("%s: invalid authorization token", c.Request.RequestURI)
+			log.Errorf("%s: invalid authorization token", c.Request.RequestURI)
 			c.Error(cerror.Unauthenticated("invalid authorization token"))
 			c.Abort()
 			return
@@ -83,7 +83,7 @@ func authHandler(jwt *jgjwt.JWT, cfg *Config) gin.HandlerFunc {
 		var me contexts.ME
 		err = json.Unmarshal([]byte(jwtClaim.Payload), &me)
 		if err != nil {
-			logrus.Errorf("%s: invalid authorization token", c.Request.RequestURI)
+			log.Errorf("%s: invalid authorization token", c.Request.RequestURI)
 			c.Error(cerror.Unauthenticated("invalid authorization token"))
 			c.Abort()
 			return
