# internal/server/http/router.go
@@ -1,9 +1,9 @@
 // Code generated by meta-egg. CAREFULLY EDIT.
 // WILL NOT BE replace after re-generated, unless you confirm it!
 // CAREFULLY EDIT.
-// Version: v1.0.1-EE
+// Version: v1.0.4-EE
 // Author: meta-egg
-// Generated at: 2023-04-16 21:27
+// Generated at: 2023-04-22 00:40
 package server
 
 import (
@@ -22,7 +22,9 @@ func (s *Server) initRouter() {
 	handler := NewHandler(s.Resource)
 
 	// 用户
+	authGroup.POST("/users", handler.CreateUser)
 	authGroup.GET("/users/:id", handler.GetUserDetail)
+	authGroup.GET("/users", handler.GetUserList)
 
 	s.Router = router
 }
